20 June 2008

* New option, display-time, sets the time status line messages stay on screen
  (unless a key is pressed). Set in milliseconds, default is 750 (0.75 seconds).
  The timer is only checked every 100 ms or so.

19 June 2008

* Use "status" consistently for status line option, and prefix for "prefix" key
  option.
* Allow commands to be entered at a prompt. This is triggered with the
  command-prompt command, bound to : by default.
* Show status messages properly, without blocking the server.

18 June 2008

* New option, set-titles. On by default, this attempts to set the window title
  using the \e]2;...\007 xterm code. 
  
  Note that elinks requires the STY environment variable (used by screen) to be
  set before it will set the window title. So, if you want window titles set by 
  elinks, set STY before running it (any value will do). I can't do this for all
  windows since setting it to an invalid value breaks screen. Why they couldn't
  just look for TERM=screen (or send it regardless if the user turned it on) is
  beyond me.
* Show arrows at either end of status line when scrolled if more windows
  exist. Highlight the arrow if a hidden window has activity or bell.
* Scroll the status line to show the current window if necessary. Also handle
  windows smaller than needed better (show a blank status line instead of
  hanging or crashing).

17 June 2008

* tmux 0.3 released.

16 June 2008

* Add some information messages when window options are changed, suggested by
  Mike Erdely. Also add a -q command-line option to suppress them.
* show-window-options (showw) command.

15 June 2008

* show-options (show) command to show one or all options.

14 June 2008

* New window options: force-width and force-height. This will force a window
  to an arbitrary width and height (0 for the default unlimited). This is
  neat for emacs which doesn't have a sensible way to force hard wrapping at 80