@@ -77,13 +77,15 @@
 - list-keys should be sorted
 ---
 buffer stack. buffer numbered 0 is top and ascending
-
 where -b number == top if missing:
-paste-buffer -b number 
-delete-buffer -b number
-set-buffer -b number string
+---
 save-buffer -b number filename
 load-buffer -b number filename
 copy-buffer (from other session)
+---
+set-buffer -b number string
+show-buffer -n number
+paste-buffer -b number 
+delete-buffer -b number
 show-buffers
 ---
